--- a/downloads.html
+++ b/downloads.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Downloads</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -34,12 +35,16 @@
 	<p>To be able to run the game, Java software should be installed on your computer, which can be downloaded <a href="https://java.com/en/download/manual.jsp">here</a>.</p>
 
 	<h1>Last Version</h1>
-	<p>Nothing has been released yet.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (31/01/2020)</li>
+	</ul>
 	<p>Stay tuned for future updates and releases.</p>
 
 	<h1>Older Versions</h1>
-	<p>You can check all updates and version releases <a href="/legend-tesla/versions">here</a>.</p>
-	<p>Nothing has been released yet.</p>
+	<p>You can check all updates and version releases <a href="/legend-tesla/versions.html">here</a>.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (31/01/2020)</li>
+	</ul>
 	<p>Stay tuned for future updates and releases.</p>
     
 
