--- a/es/index.html
+++ b/es/index.html
@@ -21,6 +21,7 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
