--- a/es/media.html
+++ b/es/media.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Media</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -37,19 +38,18 @@
 		</video>
 	</p>
 
+	<h2>Música</h2>
+	<p>Tema Épico</p><p>
+	    <audio class="media" controls>
+			<source src="/legend-tesla/res/zelda_theme_orch.wav" type="audio/wav">
+		</audio> 
+	</p>
+
 	<h2>Imágenes</h2>
 	<p>Logo (Negro)</p><p>
 		<img src="/legend-tesla/res/logo1big.png" alt="The Legend of Tesla - Logo Negro" class="media"/></p>
 	<p>Logo (Blanco)</p><p>
-		<img src="/legend-tesla/res/logo2big.png" alt="The Legend of Tesla - Logo Blanco" class="media" style="background-color:#000000"/></p>
-
-	<h2>Música</h2>
-	<p>Test teaser</p><p>
-	    <audio class="media" controls>
-			<source src="/legend-tesla/res/zelda8bit.mp3" type="audio/mpeg">
-		</audio> 
-	</p>
-    
+		<img src="/legend-tesla/res/logo2big.png" alt="The Legend of Tesla - Logo Blanco" class="media" style="background-color:#000000"/></p>    
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="/legend-tesla/es/">The Legend of Tesla</a>, desarrollado por <a href="https://github.com/eggonz">eggonz</a>.</span>
