--- a/es/versiones.html
+++ b/es/versiones.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Versiones</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -30,8 +31,11 @@
 
     <section class="main-content">
 
-	<h2>Versión Beta Demo</h2>
-	<p>Por el momento, la primera y única versión del juego se está desarrollando. Todavía no está preparada, pero estará disponible pronto. Esta versión mostrará las bases del juego y las mecánicas principales, como primer acercamiento a futuras versiones más completas. Su desarrollo comenzó en Noviembre de 2019, y su lanzamiento será probablemente a principios de 2020.</p>
+	<p>Si quisieras descargar algunas de estas versiones, puedes encontrarlas <a href="/legend-tesla/es/descargas.html">aquí</a>.</p>
+
+	<h2>v0.0 - Primera Versión</h2>
+	<p>Por el momento, esta es la primera y única versión del juego. Esta versión muestra las bases del juego y las mecánicas principales de mundo, aunque las mecánicas de batalla no se hayan implementado. Aún así, se podría considerar como un primer acercamiento a futuras versiones más completas. Su desarrollo comenzó en Noviembre de 2019, y finalmente se lanzó en Febrero de 2020.</p>
+
 	<p>Manténte atento/a a futuras actualizaciones y lanzamientos.</p>
     
 
