--- a/eu/bertsioak.html
+++ b/eu/bertsioak.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Bertsioak</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -30,8 +31,11 @@
 
     <section class="main-content">
 
-	<h2>Beta Demo Bertsioa</h2>
-	<p>Oraingoz, jokoaren lehenengo bertsioa eta bakarra garatzen ari da. Oraindik ez dago prest, baina laster egongo da eskuragarri. Bertsio honek jokoaren oinarriak eta mekanika nagusiak erakutsiko ditu, etorkizuneko bertsio osoagoen lehen hurbilpen gisa. Bere garapena 2019ko Azaroan hasi zen eta 2020ko hasieran kaleratuko da ziur aski.</p>
+	<p>Bertsio hauetakoren bat deskargatu nahi izatekotan, <a href="/legend-tesla/eu/deskargak.html">hemen</a> aurkitu ditzakezu.</p>
+
+	<h2>v0.0 - Lehen Bertsioa</h2>
+	<p>Oraingoz, honako hau jokoaren lehenengo bertsioa eta bakarra da. Bertsio honek jokoaren oinarriak eta munduko mekanika nagusiak erakusten ditu, batailak oraindik implementatu ez badira ere. Hala ere, etorkizuneko bertsio garatuagoen lehen hurbilpen gisa kontsideratu daiteke. Bertsio honen garapena 2019ko Azaroan hasi zen, eta 2020ko Otsailean argitaratu zen azkenik.</p>
+
 	<p>Adi egon etorkizuneko eguneratze eta kaleratzeei.</p>
     
 
