--- a/eu/deskargak.html
+++ b/eu/deskargak.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Deskargak</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -34,12 +35,16 @@
 	<p>Jokoa exekutatu ahal izateko, Java software-a instalatuta egon beharko litzateke zure konputagailuan, <a href="https://java.com/es/download/manual.jsp">hemen</a> deskargatu daitekeena.</p>
 
 	<h1>Azken Bertsioa</h1>
-	<p>Ez da ezer kaleratu oraindik.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (2020/01/31)</li>
+	</ul>
 	<p>Adi egon etorkizuneko eguneratze eta kaleratzeei.</p>
 
 	<h1>Bertsio Zaharragoak</h1>
-	<p>Aktualizazio eta bertsioen zehaztasun guztiak <a href="/legend-tesla/versions">hemen</a> bilatu ditzakezu.</p>
-	<p>Ez da ezer argitaratu oraindik.</p>
+	<p>Aktualizazio eta bertsioen zehaztasun guztiak <a href="/legend-tesla/eu/bertsioak.html">hemen</a> bilatu ditzakezu.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (2020/01/31)</li>
+	</ul>
 	<p>Adi egon etorkizuneko eguneratze eta kaleratzeei.</p>
     
 
