--- a/versions.html
+++ b/versions.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Versions</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -30,8 +31,11 @@
 
     <section class="main-content">
 
-	<h2>Beta Demo Version</h2>
-	<p>For the moment, the first and only version of the game is being developed. It is not ready yet, but it will be available soon. This version will show game basics and main mechanics, as a first approach to future more complete versions. Its development started on November 2019, and may be released in early 2020.</p>
+	<p>If you want to download any of these versions, you can find them <a href="/legend-tesla/downloads.html">here</a>.</p>
+
+	<h2>v0.0 - First Version</h2>
+	<p>For the moment, this is the first and only version of the game. This version shows game basics and main overworld mechanics, although battle mechanichs have not been implemented. Yet, it may be considered as a first approach to future more complete versions. Its development started on November 2019, and was finally released on February 2020.</p>
+
 	<p>Stay tuned for future updates and releases.</p>
     
 
