--- a/es/descargas.html
+++ b/es/descargas.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Descargas</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -34,12 +35,16 @@
 	<p>Para poder ejecutar el juego, el software de Java debe estar instalado en tu ordenador, el cual se puede descargar <a href="https://java.com/es/download/manual.jsp">aquí</a>.</p>
 
 	<h1>Última Versión</h1>
-	<p>Todavía no ha habido ningún lanzamiento.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (31/01/2020)</li>
+	</ul>
 	<p>Manténte atento/a a futuras actualizaciones y lanzamientos.</p>
 
 	<h1>Versiones Anteriores</h1>
-	<p>Puedes comprobar todas las actualizaciones y lanzamientos de versiones <a href="/legend-tesla/es/versiones">aquí</a>.</p>
-	<p>Todavía no ha habido ningún lanzamiento.</p>
+	<p>Puedes comprobar todas las actualizaciones y lanzamientos de versiones <a href="/legend-tesla/es/versiones.html">aquí</a>.</p>
+	<ul>
+		<li> <a href="https://www.dropbox.com/s/8bey99uhop1xplx/legend-tesla-v0.0.jar?dl=0">v0.0</a> (31/01/2020)</li>
+	</ul>
 	<p>Manténte atento/a a futuras actualizaciones y lanzamientos.</p>
     
 
