--- a/eu/berriak.html
+++ b/eu/berriak.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Berriak</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
