--- a/eu/media.html
+++ b/eu/media.html
@@ -7,6 +7,7 @@
 	<title>The Legend of Tesla - Media</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="theme-color" content="#da8aff">
+	<link rel="shortcut icon" type="image/png" href="/legend-tesla/res/sword_icon.png"/>
 	<link rel="stylesheet" href="/legend-tesla/css/style.css">
 
 	</head>
@@ -37,18 +38,18 @@
 		</video>
 	</p>
 
+	<h2>Musika</h2>
+	<p>Musika Epikoa</p><p>
+	    <audio class="media" controls>
+			<source src="/legend-tesla/res/zelda_theme_orch.wav" type="audio/wav">
+		</audio> 
+	</p>
+
 	<h2>Irudiak</h2>
 	<p>Logo (Beltza)</p><p>
 		<img src="/legend-tesla/res/logo1big.png" alt="The Legend of Tesla - Logo Beltza" class="media"/></p>
 	<p>Logo (Zuria)</p><p>
 		<img src="/legend-tesla/res/logo2big.png" alt="The Legend of Tesla - Logo Zuria" class="media" style="background-color:#000000"/></p>
-
-	<h2>Musika</h2>
-	<p>Test teaser</p><p>
-	    <audio class="media" controls>
-			<source src="/legend-tesla/res/zelda8bit.mp3" type="audio/mpeg">
-		</audio> 
-	</p>
     
 
       <footer class="site-footer">
